# tap-bing-ads

./: pyproject.toml
tap_bing_ads/: __init__.py  exclusions.py
